--- a/webroot/css/index.css
+++ b/webroot/css/index.css
@@ -96,9 +96,8 @@ fieldset {
   left: 125%;
   bottom: 0;
   min-width: 100%;
-  height: 25%;
-  box-shadow: 0 0 50px rgba(0, 0, 0, 0.5);
-  transition: position 0.2s; }
+  height: max-content;
+  box-shadow: 0 0 50px rgba(0, 0, 0, 0.5); }
 
 .page_header .page_links {
   font-style: normal;
@@ -133,6 +132,9 @@ details.show_menu span {
 .show_menu[open] ~ .page_navigation {
   top: 10%;
   left: 0%; }
+
+.page_navigation.close {
+  opacity: 0; }
 
 @media (min-width: 1114px) {
   .page_header_heading {
@@ -370,7 +372,7 @@ main {
     flex-direction: row;
     justify-content: space-between;
     flex-basis: 50%;
-    margin-top: 70px; }
+    margin-top: 73px; }
   .email_adress_input {
     min-width: 346px; }
   .submit_button {
@@ -394,6 +396,9 @@ footer {
 
 .footer_article {
   padding-bottom: 79px; }
+
+.footer_article:last-of-type {
+  padding-bottom: 29px; }
 
 .footer_article_heading {
   color: var(--text-primary-color);
@@ -504,5 +509,7 @@ footer .page_links:hover {
     display: flex;
     flex-direction: row;
     justify-content: space-between; }
+  .footer_article:last-of-type {
+    padding-bottom: 75px; }
   .page_information .footer_article_text:last-of-type {
     padding-top: 27px; } }
